# pollus-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  run_migrations.sh
.github/workflows/: docker.yml  rust.yml
migrations/: V001__create_poll_config.sql  V002__create_poll_user.sql  V003__create_poll_submission.sql  V004__make_poll_submissions_unique.sql
src/: bot.rs  main.rs  routing.rs
src/routing/: auth.rs  mod.rs  poll.rs  profile.rs  submission.rs
