# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "pollus-backend"
version = "0.1.0"
authors = ["Dominic <git@msrd0.de>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures-util = "0.3.8"
gotham = { version = "0.5", default-features = false }
gotham_restful = { version = "0.1", features = ["chrono"] }
hmac = { version = "0.10", features = ["std"] }
itertools = "0.9"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
refinery = { version = "0.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
sqlx = { version = "0.4.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"], default-features = false }
telegram-bot = { version = "0.7", features = ["rustls"], default-features = false }
tokio = { version = "0.2", features = ["rt-core"] }
